--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
 
     <!-- ! Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
+    <!-- todo  <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -27,41 +27,126 @@
   </head>
   <body>
     <main class="container">
-      <div class="user">
-        <div class="user-content">
-          <img class="" src="images/image-jeremy.png" alt="" />
+      <div class="main-user">
+        <div class="user">
+          <div class="user-content">
+            <img class="" src="images/image-jeremy.png" alt="" />
 
-          <div class="username">
-            <h2>Report for</h2>
-            <!-- <br /> -->
-            <h1>Jeremy Robson</h1>
+            <div class="username">
+              <h2>Report for</h2>
+              <!-- <br /> -->
+              <h1>Jeremy Robson</h1>
+            </div>
           </div>
-        </div>
 
-        <div class="activity">
-          <div class="daily">
-            <h3>Daily</h3>
-          </div>
-          <div class="Wekkly">
-            <h3>Wekkly</h3>
-          </div>
-          <div class="monthly">
-            <h3>Monthly</h3>
+          <div class="activity">
+            <div class="daily">
+              <h3>Daily</h3>
+            </div>
+            <div class="Wekkly">
+              <h3>Wekkly</h3>
+            </div>
+            <div class="monthly">
+              <h3>Monthly</h3>
+            </div>
           </div>
         </div>
       </div>
-      <div class="cards work">
-        <div class="card-img">
-          <img src="images/icon-work.svg" alt="" />
-        </div>
-        <div class="card-activity">
-          <div class="card-content">
-            <h2>Work</h2>
-            <h1>5hrs</h1>
+      <div class="main-card">
+        <!-- todo work -->
+        <div class="cards work">
+          <div class="card-img">
+            <img src="images/icon-work.svg" alt="" />
           </div>
-          <div class="last-activitys">
-            <img src="images/icon-ellipsis.svg" alt="" />
-            <h3>Last Wekk 36hrs</h3>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>Work</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
+          </div>
+        </div>
+        <!-- todo play -->
+        <div class="cards play">
+          <div class="card-img">
+            <img src="images/icon-play.svg" alt="" />
+          </div>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>Play</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
+          </div>
+        </div>
+        <!-- todo study -->
+        <div class="cards study">
+          <div class="card-img">
+            <img src="images/icon-study.svg" alt="" />
+          </div>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>Study</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
+          </div>
+        </div>
+        <!-- todo exercise -->
+        <div class="cards exercise">
+          <div class="card-img">
+            <img src="images/icon-exercise.svg" alt="" />
+          </div>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>exercise</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
+          </div>
+        </div>
+        <!-- todo social -->
+        <div class="cards social">
+          <div class="card-img">
+            <img src="images/icon-social.svg" alt="" />
+          </div>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>Social</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
+          </div>
+        </div>
+        <!-- todo self-care -->
+        <div class="cards self-care">
+          <div class="card-img">
+            <img src="images/icon-self-care.svg" alt="" />
+          </div>
+          <div class="card-activity">
+            <div class="card-content">
+              <h2>Self Care</h2>
+              <h1 id="">5hrs</h1>
+            </div>
+            <div class="last-activitys">
+              <img src="images/icon-ellipsis.svg" alt="" />
+              <h3>Last Wekk 36hrs</h3>
+            </div>
           </div>
         </div>
       </div>
