--- a/index.html
+++ b/index.html
@@ -1,162 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- todo displays site properly based on user's device -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- todo displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="index.css" />
-    <title>Frontend Mentor | Time tracking dashboard</title>
+  <link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="./images/favicon-32x32.png"
+  />
+  <link rel="stylesheet" href="index.css" />
+  <title>Frontend Mentor | Time tracking dashboard</title>
 
-    <!-- ! Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- todo  <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
-  </head>
-  <body>
-    <main class="container">
-      <div class="main-user">
-        <div class="user">
-          <div class="user-content">
-            <img class="" src="images/image-jeremy.png" alt="" />
+  <!-- ! Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- todo  <style>
+        .attribution {
+          font-size: 11px;
+          text-align: center;
+        }
+        .attribution a {
+          color: hsl(228, 45%, 44%);
+        }
+      </style> -->
+</head>
+<body>
+  <main class="container">
+    <div class="main-user">
+      <div class="user">
+        <div class="user-content">
+          <img class="" src="images/image-jeremy.png" alt="" />
 
-            <div class="username">
-              <h2>Report for</h2>
-              <!-- <br /> -->
-              <h1>Jeremy Robson</h1>
-            </div>
+          <div class="username">
+            <h4>Report for</h4>
+            <!-- <br /> -->
+            <h2>Jeremy Robson</h2>
           </div>
+        </div>
 
-          <div class="activity">
-            <div class="daily">
-              <h3>Daily</h3>
-            </div>
-            <div class="Wekkly">
-              <h3>Wekkly</h3>
-            </div>
-            <div class="monthly">
-              <h3>Monthly</h3>
-            </div>
+        <div class="activity">
+          <div class="daily">
+            <h3 id="daily">Daily</h3>
+          </div>
+          <div class="Weekly">
+            <h3 id="weekly">Weekly</h3>
+          </div>
+          <div class="monthly">
+            <h3 id="monthly">Monthly</h3>
           </div>
         </div>
       </div>
-      <div class="main-card">
-        <!-- todo work -->
-        <div class="cards work">
-          <div class="card-img">
-            <img src="images/icon-work.svg" alt="" />
-          </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>Work</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
-          </div>
+    </div>
+    <div class="main-card">
+      <!-- todo work -->
+      <div class="cards work">
+        <div class="card-img">
+          <img src="images/icon-work.svg" alt="" />
         </div>
-        <!-- todo play -->
-        <div class="cards play">
-          <div class="card-img">
-            <img src="images/icon-play.svg" alt="" />
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>Work</h2>
+            <h1 id="current"></h1>
           </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>Play</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
-          </div>
-        </div>
-        <!-- todo study -->
-        <div class="cards study">
-          <div class="card-img">
-            <img src="images/icon-study.svg" alt="" />
-          </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>Study</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
-          </div>
-        </div>
-        <!-- todo exercise -->
-        <div class="cards exercise">
-          <div class="card-img">
-            <img src="images/icon-exercise.svg" alt="" />
-          </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>exercise</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
-          </div>
-        </div>
-        <!-- todo social -->
-        <div class="cards social">
-          <div class="card-img">
-            <img src="images/icon-social.svg" alt="" />
-          </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>Social</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
-          </div>
-        </div>
-        <!-- todo self-care -->
-        <div class="cards self-care">
-          <div class="card-img">
-            <img src="images/icon-self-care.svg" alt="" />
-          </div>
-          <div class="card-activity">
-            <div class="card-content">
-              <h2>Self Care</h2>
-              <h1 id="">5hrs</h1>
-            </div>
-            <div class="last-activitys">
-              <img src="images/icon-ellipsis.svg" alt="" />
-              <h3>Last Wekk 36hrs</h3>
-            </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
           </div>
         </div>
       </div>
-    </main>
+      <!-- todo play -->
+      <div class="cards play">
+        <div class="card-img">
+          <img src="images/icon-play.svg" alt="" />
+        </div>
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>Play</h2>
+            <h1 id="current"></h1>
+          </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
+          </div>
+        </div>
+      </div>
+      <!-- todo study -->
+      <div class="cards study">
+        <div class="card-img">
+          <img src="images/icon-study.svg" alt="" />
+        </div>
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>Study</h2>
+            <h1 id="current"></h1>
+          </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
+          </div>
+        </div>
+      </div>
+      <!-- todo exercise -->
+      <div class="cards exercise">
+        <div class="card-img">
+          <img src="images/icon-exercise.svg" alt="" />
+        </div>
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>exercise</h2>
+            <h1 id="current"></h1>
+          </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
+          </div>
+        </div>
+      </div>
+      <!-- todo social -->
+      <div class="cards social">
+        <div class="card-img">
+          <img src="images/icon-social.svg" alt="" />
+        </div>
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>Social</h2>
+            <h1 id="current"></h1>
+          </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
+          </div>
+        </div>
+      </div>
+      <!-- todo self-care -->
+      <div class="cards self-care">
+        <div class="card-img">
+          <img src="images/icon-self-care.svg" alt="" />
+        </div>
+        <div class="card-activity">
+          <div class="card-content">
+            <h2>Self Care</h2>
+            <h1 id="current"></h1>
+          </div>
+          <div class="last-activitys">
+            <img src="images/icon-ellipsis.svg" alt="" />
+            <h3 id="previous"></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <!-- ? <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
-  </body>
+  <!-- ? <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div> -->
+  <script src="main.js" type="text/javascript" charset="utf-8"></script>
+</body>
 </html>
